# sabakan

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
assets/preview/: movie.mov
public/licenses/: node-format.json
scripts/: generate-notice.ts
src/: main.tsx
src-tauri/: Cargo.toml  Entitlements.plist.template  Info.plist  about.toml  build.rs  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: browser-sync
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  bootstrap.rs  commands.rs  constants.rs  features.rs  lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/app/: bootstrap.rs  builder.rs  menu.rs
src-tauri/src/app/builder/: base.rs  macos.rs  windows.rs
src-tauri/src/app/menu/: infrastructure.rs  services.rs
src-tauri/src/commands/: fs.rs  system.rs  webview.rs
src-tauri/src/features/: browsersync.rs  installation.rs
src-tauri/src/features/browsersync/: commands.rs  infrastructure.rs  services.rs
src-tauri/src/features/browsersync/infrastructure/: command.rs  process.rs  wait.rs
src-tauri/src/features/installation/: commands.rs  constants.rs  infrastructure.rs  services.rs
src-tauri/src/features/installation/infrastructure/: browsersync.rs  node.rs
src-tauri/src/features/menu/: infrastructure.rs  services.rs
src-tauri/src/types/: browsersync.rs
src-tauri/src/utils/: archive.rs  fs.rs  logger.rs  network.rs  path.rs  retry.rs
src/app/: App.tsx  GlobalStyles.tsx  Initializer.tsx  context.ts  provider.tsx  router.tsx  (+1 more)
(+72 files in other folders)
