[package]
name = "Sabakan"
description = "Support Your Web Development"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sabakan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies
log = "0.4.27"
log4rs = "1.3.0"
reqwest = "0.12.22"
tar = "0.4.44"
zip = "4.2.0"
flate2 = "1.1.2"
tokio = "1.45.1"
tauri-plugin-dialog = "2"
nix = { version = "0.30.1", features = ["process", "signal"] }
libc = "0.2.174"
windows-sys = { version = "0.52.0", features = ["Win32_System_Threading"] }
winapi = "0.3.9"
